--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "handlebars": "^4.7.8",
     "mongoose": "^8.0.3",
+    "mongoose-paginate-v2": "^1.8.0",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
     "sweetalert2": "^11.10.1"
