--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose-paginate-v2": "^1.8.0",
     "nodemon": "^3.0.1",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.2",
     "sweetalert2": "^11.10.1"
